--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chokidar": "^3.5.2",
     "mime-types": "^2.1.32",
     "path-parse": "^1.0.7",
+    "rollup": "^2.56.2",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-polyfill-node": "^0.7.0",
